kubernetes/overlays/prod/image-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
name: frontend

spec:
template:
spec:
containers:
- name: frontend

```
      image: prod-frontend-image:v1
```

---

apiVersion: apps/v1
kind: Deployment
metadata:
name: backend

spec:
template:
spec:
containers:
- name: backend

```
      image: prod-backend-image:v1
```
