kubernetes/overlays/prod/replica-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
name: frontend

spec:
replicas: 4
-----------

apiVersion: apps/v1
kind: Deployment
metadata:
name: backend

spec:
replicas: 6
