kubernetes/overlays/prod/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
name: shared-alb-ingress

annotations:
alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:REGION:ACCOUNT_ID:certificate/CERT_ID

spec:
rules:
- host: frontend.example.com

```
- host: api.example.com
```
